fixed header on mobile

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -60,7 +60,7 @@ header nav {
     }
 
     .header nav {
-        position: absolute;
+        position: fixed;
         right: 0;
         top: 0;
         width: 100vw;
